# fastapi_practice

./: .gitignore  docker-compose.yml
application/: pyproject.toml
containers/fastapi/: Dockerfile
